Dockerfile update